--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@
         data-aos="fade-down">
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logo.svg" alt="Logo" />
+          <img src="/images/Logo.png" alt="Logo" />
         </a>
         <button
           class="navbar-toggler"
