--- a/categories.html
+++ b/categories.html
@@ -24,7 +24,7 @@
       data-aos="fade-down">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
-          <img src="/images/logo.svg" alt="" />
+          <img src="/images/Logo.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -61,80 +61,81 @@
     
     <div class="page-content page-home">
  
-
+       <!-- TODO 8 Make Trend Categories -->
     <section class="store-trend-categories">
-        <div class="container">
-          <div class="row">
-            <div class="col-12" data-aos="fade-up">
-              <h5>All Categories</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="100">
-              <a href="#" class="component-categories d-block">
-                <div class="categories-image">
-                  <img src="/images/categories-gadgets.svg" alt="" class="w-100">
-                </div>
-                <p class="categories-text">
-                  Gadgets
-                </p>
-              </a>
-            </div>
-              <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="200">
-                <a href="#" class="component-categories d-block">
-                  <div class="categories-image">
-                    <img src="/images/categories-furniture.svg" alt="" class="w-100">
-                  </div>
-                  <p class="categories-text">
-                    Furniture
-                  </p>
-                </a>
-              </div>
-              <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="300">
-              <a href="#" class="component-categories d-block">
-                <div class="categories-image">
-                  <img src="/images/categories-food.svg" alt="" class="w-100">
-                </div>
-                <p class="categories-text">
-                  Food
-                </p>
-              </a>
-            </div>
-            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="400">
-              <a href="#" class="component-categories d-block">
-                <div class="categories-image">
-                  <img src="/images/categories-fashion.svg" alt="" class="w-100">
-                </div>
-                <p class="categories-text">
-                  Fashion
-                </p>
-              </a>
-            </div>
-            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="500">
-              <a href="#" class="component-categories d-block">
-                <div class="categories-image">
-                  <img src="/images/categories-tools.svg" alt="" class="w-100">
-                </div>
-                <p class="categories-text">
-                  Tools
-                </p>
-              </a>
-            </div>
-            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="600">
-              <a href="#" class="component-categories d-block">
-                <div class="categories-image">
-                  <img src="/images/categories-cooking.svg" alt="" class="w-100">
-                </div>
-                <p class="categories-text">
-                  Cooking Ware
-                </p>
-              </a>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12" data-aos="fade-up">
+            <h5>Trend Categories</h5>
           </div>
         </div>
-    </section>
-    <!-- Make new product -->
-    <section class="store-new-products">
+        <div class="row">
+          <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="100">
+            <a href="#" class="component-categories d-block">
+              <div class="categories-image">
+                <img src="/images/categories-phone.svg" alt="" class="w-100">
+              </div>
+              <p class="categories-text">
+                Phone
+              </p>
+            </a>
+          </div>
+            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="200">
+              <a href="#" class="component-categories d-block">
+                <div class="categories-image">
+                  <img src="/images/categories-earphone.svg" alt="" class="w-100">
+                </div>
+                <p class="categories-text">
+                  Earphone
+                </p>
+              </a>
+            </div>
+            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="300">
+            <a href="#" class="component-categories d-block">
+              <div class="categories-image">
+                <img src="/images/categories-laptop'.svg" alt="" class="w-100">
+              </div>
+              <p class="categories-text">
+                Laptop
+              </p>
+            </a>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="400">
+            <a href="#" class="component-categories d-block">
+              <div class="categories-image">
+                <img src="/images/categories-pc.svg" alt="" class="w-100">
+              </div>
+              <p class="categories-text">
+                PC
+              </p>
+            </a>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="500">
+            <a href="#" class="component-categories d-block">
+              <div class="categories-image">
+                <img src="/images/categories-powerbank.svg" alt="" class="w-100">
+              </div>
+              <p class="categories-text">
+                Powerbank
+              </p>
+            </a>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="600">
+            <a href="#" class="component-categories d-block">
+              <div class="categories-image">
+                <img src="/images/categories-mouse.svg" alt="" class="w-100">
+              </div>
+              <p class="categories-text">
+                Mouse
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <!-- TODO 10 make new Products  -->
+  <section class="store-new-products">
       <div class="container">
         <div class="row">
           <div class="col-12" data-aos="fade-up">
@@ -150,7 +151,7 @@
                 </div>
               </div>
               <div class="products-text">
-                iPhone XS Max
+                Iphone XS Max
               </div>
               <div class="products-price">
                 $106,290
@@ -160,12 +161,12 @@
           <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="200">
             <a href="/details.html" class="component-products d-block">
               <div class="products-thumbnail">
-                <div class="products-image" style="background-image: url('/images/new-product-dress.png')">
+                <div class="products-image" style="background-image: url('/images/new-product-earphone.png')">
 
                 </div>
               </div>
               <div class="products-text">
-                Pinky Flower
+                Sony WF-1000XM3
               </div>
               <div class="products-price">
                 $9,509
@@ -175,27 +176,26 @@
           <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
             <a href="/details.html" class="component-products d-block">
               <div class="products-thumbnail">
-                <div class="products-image" style="background-image: url('/images/new-product-sofa.png')">
+                <div class="products-image" style="background-image: url('/images/new-product-laptop.png')">
 
                 </div>
               </div>
               <div class="products-text">
-                Aesthetic Sofa
+                Macbook Pro 2021
               </div>
               <div class="products-price">
-                $1,409
+                $110,409
               </div>
             </a>
           </div>
           <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="400">
             <a href="/details.html" class="component-products d-block">
               <div class="products-thumbnail">
-                <div class="products-image" style="background-image: url('/images/new-product-taco.png')">
-
+                <div class="products-image" style="background-image: url('/images/new-product-powerbank.png')">
                 </div>
               </div>
               <div class="products-text">
-                Vegetables Taco
+                agefis Wood Powerbank 
               </div>
               <div class="products-price">
                 $225
@@ -205,15 +205,15 @@
           <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="500">
             <a href="/details.html" class="component-products d-block">
               <div class="products-thumbnail">
-                <div class="products-image" style="background-image: url('/images/new-product-phone-holder.png')">
+                <div class="products-image" style="background-image: url('/images/new-product-mouse.png')">
 
                 </div>
               </div>
               <div class="products-text">
-                Phone Holder
+                Black Gaming Mouse
               </div>
               <div class="products-price">
-                $15,194
+                $15,184
               </div>
             </a>
           </div>
@@ -225,7 +225,7 @@
                 </div>
               </div>
               <div class="products-text">
-                  Drone E-273
+                  Drone  E-273
               </div>
               <div class="products-price">
                 $42,503
@@ -235,15 +235,15 @@
           <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="700">
             <a href="/details.html" class="component-products d-block">
               <div class="products-thumbnail">
-                <div class="products-image" style="background-image: url('/images/new-product-shoes.png')">
+                <div class="products-image" style="background-image: url('/images/new-product-phone2.png')">
 
                 </div>
               </div>
               <div class="products-text">
-                Nike Pastel Edition
+                Iphone 13 Pro Max
               </div>
               <div class="products-price">
-                $30,482
+                $130,482
               </div>
             </a>
           </div>
@@ -254,7 +254,7 @@
                 </div>
               </div>
               <div class="products-text">
-                iMac 
+                iMac
               </div>
               <div class="products-price">
                 $25,783
@@ -264,7 +264,7 @@
         </div>
       </div>
   </section>
-    </div>
+  </div>
 
     <footer>
       <div class="container">
