--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
   <body>
   <!-- TODO 3 Make navigation bar markup -->
   <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark
+      class="navbar navbar-expand-lg navbar-dark 
       navbar-store fixed-top navbar-fixed-top"
+      style="background-color: #2A2A34;"
       data-aos="fade-down">
       <div class="container">
         <a class="navbar-brand" href="/index.html">
-          <img src="/images/logo.svg" alt="" />
+          <img src="/images/Logo.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -73,13 +74,13 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/images/banner.jpg" alt="" class="d-block w-100">
+                  <img src="/images/banner.png" alt="" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                   <img src="/images/banner1.png" alt="" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/banner-tiga.jpg" alt="" class="d-block w-100">
+                  <img src="/images/banner3.png" alt="" class="d-block w-100">
                 </div>
               </div>
             </div>
@@ -100,60 +101,60 @@
             <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="100">
               <a href="#" class="component-categories d-block">
                 <div class="categories-image">
-                  <img src="/images/categories-gadgets.svg" alt="" class="w-100">
+                  <img src="/images/categories-phone.svg" alt="" class="w-100">
                 </div>
                 <p class="categories-text">
-                  Gadgets
+                  Phone
                 </p>
               </a>
             </div>
               <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="200">
                 <a href="#" class="component-categories d-block">
                   <div class="categories-image">
-                    <img src="/images/categories-furniture.svg" alt="" class="w-100">
+                    <img src="/images/categories-earphone.svg" alt="" class="w-100">
                   </div>
                   <p class="categories-text">
-                    Furniture
+                    Earphone
                   </p>
                 </a>
               </div>
               <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="300">
               <a href="#" class="component-categories d-block">
                 <div class="categories-image">
-                  <img src="/images/categories-food.svg" alt="" class="w-100">
+                  <img src="/images/categories-laptop'.svg" alt="" class="w-100">
                 </div>
                 <p class="categories-text">
-                  Food
+                  Laptop
                 </p>
               </a>
             </div>
             <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="400">
               <a href="#" class="component-categories d-block">
                 <div class="categories-image">
-                  <img src="/images/categories-fashion.svg" alt="" class="w-100">
+                  <img src="/images/categories-pc.svg" alt="" class="w-100">
                 </div>
                 <p class="categories-text">
-                  Fashion
+                  PC
                 </p>
               </a>
             </div>
             <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="500">
               <a href="#" class="component-categories d-block">
                 <div class="categories-image">
-                  <img src="/images/categories-tools.svg" alt="" class="w-100">
+                  <img src="/images/categories-powerbank.svg" alt="" class="w-100">
                 </div>
                 <p class="categories-text">
-                  Tools
+                  Powerbank
                 </p>
               </a>
             </div>
             <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="600">
               <a href="#" class="component-categories d-block">
                 <div class="categories-image">
-                  <img src="/images/categories-cooking.svg" alt="" class="w-100">
+                  <img src="/images/categories-mouse.svg" alt="" class="w-100">
                 </div>
                 <p class="categories-text">
-                  Cooking Ware
+                  Mouse
                 </p>
               </a>
             </div>
@@ -178,7 +179,7 @@
                   </div>
                 </div>
                 <div class="products-text">
-                  iPhone XS Max
+                  Iphone XS Max
                 </div>
                 <div class="products-price">
                   $106,290
@@ -188,12 +189,12 @@
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="200">
               <a href="/details.html" class="component-products d-block">
                 <div class="products-thumbnail">
-                  <div class="products-image" style="background-image: url('/images/new-product-dress.png')">
+                  <div class="products-image" style="background-image: url('/images/new-product-earphone.png')">
  
                   </div>
                 </div>
                 <div class="products-text">
-                  Pinky Flower
+                  Sony WF-1000XM3
                 </div>
                 <div class="products-price">
                   $9,509
@@ -203,27 +204,26 @@
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <a href="/details.html" class="component-products d-block">
                 <div class="products-thumbnail">
-                  <div class="products-image" style="background-image: url('/images/new-product-sofa.png')">
+                  <div class="products-image" style="background-image: url('/images/new-product-laptop.png')">
  
                   </div>
                 </div>
                 <div class="products-text">
-                  Aesthetic Sofa
+                  Macbook Pro 2021
                 </div>
                 <div class="products-price">
-                  $1,409
+                  $110,409
                 </div>
               </a>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="400">
               <a href="/details.html" class="component-products d-block">
                 <div class="products-thumbnail">
-                  <div class="products-image" style="background-image: url('/images/new-product-taco.png')">
- 
+                  <div class="products-image" style="background-image: url('/images/new-product-powerbank.png')">
                   </div>
                 </div>
                 <div class="products-text">
-                  Vegetables Taco
+                  agefis Wood Powerbank 
                 </div>
                 <div class="products-price">
                   $225
@@ -233,15 +233,15 @@
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="500">
               <a href="/details.html" class="component-products d-block">
                 <div class="products-thumbnail">
-                  <div class="products-image" style="background-image: url('/images/new-product-phone-holder.png')">
+                  <div class="products-image" style="background-image: url('/images/new-product-mouse.png')">
  
                   </div>
                 </div>
                 <div class="products-text">
-                  Phone Holder
+                  Black Gaming Mouse
                 </div>
                 <div class="products-price">
-                  $15,194
+                  $15,184
                 </div>
               </a>
             </div>
@@ -253,7 +253,7 @@
                   </div>
                 </div>
                 <div class="products-text">
-                    Drone E-273
+                    Drone  E-273
                 </div>
                 <div class="products-price">
                   $42,503
@@ -263,15 +263,15 @@
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="700">
               <a href="/details.html" class="component-products d-block">
                 <div class="products-thumbnail">
-                  <div class="products-image" style="background-image: url('/images/new-product-shoes.png')">
+                  <div class="products-image" style="background-image: url('/images/new-product-phone2.png')">
  
                   </div>
                 </div>
                 <div class="products-text">
-                  Nike Pastel Edition
+                  Iphone 13 Pro Max
                 </div>
                 <div class="products-price">
-                  $30,482
+                  $130,482
                 </div>
               </a>
             </div>
@@ -282,7 +282,7 @@
                   </div>
                 </div>
                 <div class="products-text">
-                  iMac 
+                  iMac
                 </div>
                 <div class="products-price">
                   $25,783
