--- a/details.html
+++ b/details.html
@@ -20,7 +20,7 @@
       navbar-store fixed-top navbar-fixed-top" data-aos="fade-down">
     <div class="container">
       <a class="navbar-brand" href="/index.html">
-        <img src="/images/logo.svg" alt="" />
+        <img src="/images/Logo.png" alt="" />
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
@@ -100,7 +100,7 @@
             <transition name="slide-fade" mode="out-in">
               <img
                 :key="photos[activePhoto].id"
-                :src="photos[activePhoto].src"
+                :src="photos[activePhoto].url"
                 class="w-100 main-image"
                 alt=""
               />
