--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <a href="/index.html" class="navbar-brand">
-          <img src="/images/logo.svg" alt="Logo" />
+          <img src="/images/Logo.png" alt="Logo" />
         </a>
         <button
           class="navbar-toggler"
