--- a/register-success.html
+++ b/register-success.html
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="row align-items-center row-login justify-content-center">
             <div class="col-lg-6 text-center">
-              <img src="/images/success.svg" alt="" class="mb-4">
+              <img src="/images/success.png" alt="" class="mb-4">
               <h2>
                 Welcome to Store
               </h2>
