--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
  
-    <title>Store - Your Best Marketplace</title>
+    <title>GadgetAh! - Your Best Gadget Store</title>
  
     <!-- untuk animasi -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
