--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Store - Your Best Marketplace</title>
+  <title>GadgetAh! - Your Best Gadget Store</title>
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link href="style/main.css" rel="stylesheet" />
@@ -171,8 +171,61 @@
         </div>
       </section>
     </div>
-
-
+    <section class="store-review" data-aos="fade-up" data-aos-delay="700">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-8 mt-3 mb-3">
+            <h5>Customer Review (3)</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <ul class="list-unstyled">
+              <li class="media">
+                <img
+                  src="/images/icon-testimonial-1.png"
+                  class="mr-3 rounded-circle"
+                  alt=""
+                />
+                <div class="media-body">
+                  <h5 class="mt-2 mb-1">Seamus</h5>
+                  I thought it was not good for my work. I really happy
+                  to decided buy this product last week now feels like
+                  i have a cool phone.
+                </div>
+              </li>
+              <li class="media my-4">
+                <img
+                  src="/images/icon-testimonial-2.png"
+                  class="mr-3 rounded-circle"
+                  alt=""
+                />
+                <div class="media-body">
+                  <h5 class="mt-2 mb-1">Ron</h5>
+                  Color is great with the minimalist concept. Even I thought
+                  it was made by Cactus industry. I do really satisfied with
+                  this.
+                </div>
+              </li>
+              <li class="media">
+                <img
+                  src="/images/icon-testimonial-3.png"
+                  class="mr-3 rounded-circle"
+                  alt=""
+                />
+                <div class="media-body">
+                  <h5 class="mt-2 mb-1">Luna</h5>
+                  When I saw at first, it was really awesome to have with.
+                  Just let me know if there is another upcoming product like
+                  this.
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+    
+    </section>
+  </div>
   </div>
 
   <footer>
