--- a/cart.html
+++ b/cart.html
@@ -166,10 +166,10 @@
                 </tr>
                 <tr>
                   <td style="width: 25%;">
-                    <img src="/images/new-product-dress.png" alt="" class="cart-image">
+                    <img src="/images/new-product-earphone.png" alt="" class="cart-image">
                   </td>
                   <td style="width: 30%;">
-                    <div class="product-title">Pinky Flower</div>
+                    <div class="products-title">Sony WF-1000XM3</div>
                     <div class="product-subtitle">by Luna</div>
                   </td>
                   <td style="width: 30%;">
