--- a/login.html
+++ b/login.html
@@ -70,8 +70,8 @@
             </div>
             <div class="col-lg-5">
               <h2>
-                Belanja kebutuhan utama, <br />
-                menjadi lebih mudah
+                Shopping for essentials, <br />
+                become easier
               </h2>
               <form class="mt-3">
                 <div class="form-group">
