--- a/index.html
+++ b/index.html
@@ -98,10 +98,18 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-4 col-md-3 col-lg-2" data-aos="fade-up" data-aos-delay="100">
-              <a href="#" class="component-categories d-block">
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a class="component-categories d-block" href="#">
                 <div class="categories-image">
-                  <img src="/images/categories-phone.svg" alt="" class="w-100">
+                  <img
+                    src="/images/categories-phone.svg"
+                    alt="Gadgets Categories"
+                    class="w-100"
+                  />
                 </div>
                 <p class="categories-text">
                   Phone
