--- a/success.html
+++ b/success.html
@@ -31,8 +31,8 @@
                 Transaction Processed!
               </h2>
               <p>
-                Silahkan tunggu konfirmasi email dari kami dan <br />
-                kami akan menginformasikan resi secepat mungkin!
+                Please wait for an email confirmation from us <br>
+                and we will inform you of the receipt as soon as possible!
               </p>
               <div>
                 <a class="btn btn-success w-50 mt-4" href="/dashboard.html">
